<resources>
    <string name="app_name"> SAM Umerkot Sindhi </string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="ta1heading">SECTION A: HH Identification </string>
    <string name="ta2heading">SECTION A2: MEMBERS INFORMATION </string>
    <string name="tdheading">SECTION D: HOUSEHOLD MEMBER’S INFORMATION</string>
    <string name="teheading">SECTION E: REPRODUCTIVE HEALTH (Complete this table for all married women aged 15 &#8211; 49 years in the household) </string>
    <string name="te2heading">MATERNAL MORTALITY STATUS</string>
    <string name="tfheading">SECTION F: ANTENATAL CARE</string>
    <string name="tiheading">SECTION I: CHILD HEALTH</string>
    <string name="ti2heading">SECTION I2: ACUTE RESPIRATORY INFECTION (ARI)</string>
    <string name="tjheading">SECTION J: IMMUNIZATION</string>
    <string name="tnheading">SECTION N: WATER AND SANITATION</string>
    <string name="taeheading">ANTHRO ENDING ACTIVITY</string>
    <string name="splashText">Supporting Women and Girls in Pakistan Scaling Up\n
    Empowerment and Care  Strategies  to Address Health and Survival\n
    Centre of Excellence Women &amp; Child Health\n
    Aga Khan University, Karachi, Pakistan</string>
    <string name="title_activity_family_members_list">Family Members List</string>
    <string name="ts1heading">SECTION 1: نشاندهي جي معلومات </string>
    <string name="ts2heading">SECTION 2: ٻار جي جسم جي ماپ </string>
    <string name="ts3heading">SECTION 3: ٻار جي بيماري </string>
    <string name="ts4heading">SECTION 4: ٻار جي صحت جي سڌاري جي چڪاس </string>
    <string name="ts5heading">SECTION 5: اضافي غذا ملڻ جي چڪاس </string>
    <string name="ts6heading">SECTION 6: علاج ۽ اضافي غذا جي استعمال جو نتيجو </string>
    <string name="ts7heading">SECTION 7: تحقيق مان خارج ڪرڻ جي لاءِ </string>
    <string name="ts8heading">SECTION 8: تحقيق مان خارج ڪرڻ جي لاءِ</string>
    <string name="yes"> ها </string>
    <string name="no"> نه </string>
    <string name="dkn"> خبر نه آهي </string>
    <string name="none"> ڪو به ناهي </string>
    <string name="never"> ڪڏهن به نه </string>
    <string name="nap"> لاڳو نٿو ٿئي </string>
    <string name="nav"> موجود ناهي </string>
    <string name="ref"> انڪار ڪري ڇڏيو </string>
    <string name="other"> ٻيو ڪجھ </string>
    <string name="specify"> وضاحت ڪريو </string>
    <string name="year"> سال </string>
    <string name="month"> مھينا </string>
    <string name="weeks"> هفتا </string>
    <string name="days"> ڏينهن </string>
    <string name="hours"> ڪلاڪ </string>
    <string name="minutes"> منٽ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> ڪلوميٽر </string>
    <string name="cm"> Centimeters </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپيا </string>
    <string name="num"> نمبر </string>
    <string name="name"> نالو </string>
    <string name="c_name"> ٻار جو نالو </string>
    <string name="f_name"> پيءُ جو نالو </string>
    <string name="m_name"> ماءُ جو نالو </string>
    <string name="id"> ID </string>
    <string name="time"> HH:mm </string>
    <string name="mid1"> Measurer 1: ID </string>
    <string name="mid2"> Measurer 2: ID </string>
    <string name="mid3"> Measurer 3: ID </string>
    <string name="total">Total</string>
    <string name="mwra">MWRA</string>
    <string name="under5">Child Age 5 \- 10</string>
    <string name="part">Partial</string>
    <string name="complt">Complete</string>
    <string name="reason"> ان جو سبب </string>
    <string name="address"> ايڊريس </string>
    <string name="anthro_error"> Kindly Re-Do the measurements </string>
    <string name="a101"> Cluster number </string>
    <string name="a101a"> This information will be based on the list of villages generated from the district. Each enumerator will be given a list of clusters that he/she will be visiting, and before starting the interview, this information will be entered from the same list. </string>
    <string name="a101dd"> Day </string>
    <string name="a101mm"> Month </string>
    <string name="a101yy"> Year </string>
    <string name="a102"> Cluster type </string>
    <string name="a102hh"> Hours </string>
    <string name="a102mm"> Minutes </string>
    <string name="a105"> District </string>
    <string name="checkHHpresent"> Head of Household name matches with Line Listing data </string>
    <string name="a106"> Enumeration Block</string>
    <string name="a107"> Province </string>
    <string name="a108"> District </string>
    <string name="a109"> Tehsil </string>
    <string name="a110"> City </string>
    <string name="a111"> Village</string>
    <string name="a112"> A112:\t Household number </string>
    <string name="a113_title1"> a113_title1:\t The enumerator will read out the consent for understanding of respondent and will mention the purpose of the study and time required to complete the interviews (a separate consent sheet will be provided to the enumerators</string>
    <string name="a113hint"> IF VERBAL CONSENT IS NOT GIVEN STOP INTERVIEW AND MOVE TO QUESTION # A119 OF THIS SECTION TO RECORD THE OUTCOME OF THE INTERVIEW </string>
    <string name="a113"> A113:\t Was Consent Taken ? </string>
    <string name="a113_title2"> Verbal consent: </string>
    <string name="a113a"> Yes </string>
    <string name="a113b"> No</string>
    <string name="a114"> A114:\t Name of the Respondent </string>
    <string name="a115"> A115:\t Age of Respondent in completed years </string>
    <string name="a116"> A116:\t Does your HH Have a child aged 5 &#8211; 10 Years ? </string>
    <string name="a116a"> Yes </string>
    <string name="a116b"> No </string>
    <string name="a117"> A117:\t Does any child 5 &#8211; 10 year of aged group of This HH is suffering from any chronic disease ? </string>
    <string name="a117a"> Yes </string>
    <string name="a117b"> No </string>
    <string name="a118"> A118:\t Is any child in your household aged 5 &#8211; 10 involved in any other nutritional research / project ? </string>
    <string name="a118a"> Yes </string>
    <string name="a118b"> No </string>
    <string name="a119"> A119:\t Result of Household Questionnaire interview: </string>
    <string name="a119hint"> Discuss any result not completed with team leader. </string>
    <string name="a119a"> Completed</string>
    <string name="a119b"> No household member at home or no competent respondent at home at time of visit</string>
    <string name="a119c"> Entire household absent for extended period of time </string>
    <string name="a119d"> Refused</string>
    <string name="a119e"> Dwelling vacant or address not a dwelling </string>
    <string name="a119f"> Dwelling not found </string>
    <string name="a119g"> No Child between 5 &#8211; 10 Years </string>
    <string name="a119h"> HH Having a child of 5 &#8211; 10 Years age group with Chronic Disease </string>
    <string name="a119i"> HH having a child of 5 &#8211; 10 Years age group which is part of any nutrition study </string>
    <string name="a119x"> Other</string>
    <string name="a201"> A201:\t Line number </string>
    <string name="a202"> A202:\t First, please tell me the name of each person who usually lives here, starting with the head of the household. Probe for additional household members.</string>
    <string name="a203"> A203:\t relationship with  Head of household)? </string>
    <string name="a203a"> Head of HH </string>
    <string name="a203b"> Wife / Husband </string>
    <string name="a203c"> Son / Daughter </string>
    <string name="a203d"> Son in law / Daughter in law </string>
    <string name="a203e"> Grandchild </string>
    <string name="a203f"> Parents </string>
    <string name="a203g"> Parents in law </string>
    <string name="a203h"> Brother/Sister </string>
    <string name="a203i"> Brother in law / Sister in law </string>
    <string name="s9q9"> s9q9: توهان جي گھرجا ٽي اهم ڪمائي جا ذريعا ڪهڙا آهن ؟</string>
    <string name="s9q1"> s9q1: پهريون ڪمائي جو ذريعو</string>
    <string name="s9q101">  زراعت </string>
    <string name="s9q102"> چوپايو مال، چوپايو مال وڪڻڻ/ جانورن </string>
    <string name="s9q103">  مڇي جو شڪار، مڇي جو فارم </string>
    <string name="s9q104"> هٿ جي ٺهيل ڪپرن جو وڪرو </string>
    <string name="s9q105"> ٻارڻ واريو ڪاٺيون جمع ڪرڻ ۽ وڪڻڻ</string>
    <string name="s9q106"> اڱر/ ڪوئلو وڪڻڻ</string>
    <string name="s9q107"> ڏهاڙي تي مزدوري/ هاري زراعت</string>
    <string name="s9q108"> مزدور </string>
    <string name="s9q109">  گاڏي وارو </string>
    <string name="s9q110"> ڪاروبار ، دڪاندار</string>
    <string name="s9q111"> سرڪاري نوڪري</string>
    <string name="s9q112"> خانگي نوڪري </string>
    <string name="s9q113"> بينظير انڪم سپورٽ پروگرام</string>
    <string name="s9q2"> s9q2: ٻيون ڪمائي جو ذريعو</string>
    <string name="s9q201"> زراعت</string>
    <string name="s9q202"> چوپايو مال، چوپايو مال وڪڻڻ/ جانورن</string>
    <string name="s9q203"> مڇي جو شڪار، مڇي جو فارم</string>
    <string name="s9q204"> هٿ جي ٺهيل ڪپرن جو وڪرو</string>
    <string name="s9q205">  ٻارڻ واريو ڪاٺيون جمع ڪرڻ ۽ وڪڻڻ</string>
    <string name="s9q206"> اڱر/ ڪوئلو وڪڻڻ</string>
    <string name="s9q207"> ڏهاڙي تي مزدوري/ هاري زراعت</string>
    <string name="s9q208"> مزدور</string>
    <string name="s9q209"> گاڏي وارو</string>
    <string name="s9q210">  ڪاروبار ، دڪاندار </string>
    <string name="s9q211"> سرڪاري نوڪري </string>
    <string name="s9q212"> خانگي نوڪري</string>
    <string name="s9q213"> بينظير انڪم سپورٽ پروگرام</string>
    <string name="s9q3"> s9q3: ٽيون ڪمائي جو ذريعو </string>
    <string name="s9q301"> زراعت</string>
    <string name="s9q302"> چوپايو مال، چوپايو مال وڪڻڻ/ جانورن</string>
    <string name="s9q303">  مڇي جو شڪار، مڇي جو فارم</string>
    <string name="s9q304"> هٿ جي ٺهيل ڪپرن جو وڪرو </string>
    <string name="s9q305"> ٻارڻ واريو ڪاٺيون جمع ڪرڻ ۽ وڪڻڻ</string>
    <string name="s9q306"> اڱر/ ڪوئلو وڪڻڻ</string>
    <string name="s9q307"> ڏهاڙي تي مزدوري/ هاري زراعت</string>
    <string name="s9q308"> مزدور </string>
    <string name="s9q309"> گاڏي وارو </string>
    <string name="s9q310"> , ڪاروبار ، دڪاندار</string>
    <string name="s9q311"> سرڪاري نوڪري</string>
    <string name="s9q312"> خانگي نوڪري</string>
    <string name="s9q313"> بينظير انڪم سپورٽ پروگرام</string>
    <string name="fus8q1">ٺيڪ ٿي ويو</string>
    <string name="fus8q101">≥12.5 cm ٻانهن جي وچين حصي جي گولائي    </string>
    <string name="fus8q101a">ها</string>
    <string name="fus8q101b">نه</string>
    <string name="fus8q102"> ۾ هجڻMAMگھٽ ۾ ٻه مهينا </string>
    <string name="fus8q102a">ها</string>
    <string name="fus8q102b">نه</string>
    <string name="fus8q2">ڇڏي ويو</string>
    <string name="fus8q201">مسلسل ٽن 15 ڏينهن جي دورن دوران غير حارضر رهيو</string>
    <string name="fus8q201a">ها</string>
    <string name="fus8q201b">نه</string>
    <string name="fus8q3">فوت ٿي ويو</string>
    <string name="fus8q301">تحقيق ۾ شامل ٿيڻ دوران فوت ٿي ويو</string>
    <string name="fus8q301a">ها</string>
    <string name="fus8q301b">نه</string>
    <string name="fus8q4">ٺيڪ نه ٿيو</string>
    <string name="fus8q401">ڇار مهينن دوران (او ٽي پي) مان خارج نه ٿي سگھيو</string>
    <string name="fus8q401a">ها</string>
    <string name="fus8q401b">نه</string>
</resources>