<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.ctsam.ui.sections.SectionIActivity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/fldGrpSectionI"
            style="@style/vlinearlayout">

            <TextView
                style="@style/i_textview"
                android:text="@string/s9q9" />

            <!--&lt;!&ndash; s9q9  Title   &ndash;&gt;
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q9"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/s9q9" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>-->

            <!-- s9q1  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q1"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/s9q1" />

                    <RadioGroup
                        android:id="@+id/s9q1"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/s9q101"
                            style="@style/radiobutton"
                            android:text="@string/s9q101" />

                        <RadioButton
                            android:id="@+id/s9q102"
                            style="@style/radiobutton"
                            android:text="@string/s9q102" />

                        <RadioButton
                            android:id="@+id/s9q103"
                            style="@style/radiobutton"
                            android:text="@string/s9q103" />

                        <RadioButton
                            android:id="@+id/s9q104"
                            style="@style/radiobutton"
                            android:text="@string/s9q104" />

                        <RadioButton
                            android:id="@+id/s9q105"
                            style="@style/radiobutton"
                            android:text="@string/s9q105" />

                        <RadioButton
                            android:id="@+id/s9q106"
                            style="@style/radiobutton"
                            android:text="@string/s9q106" />

                        <RadioButton
                            android:id="@+id/s9q107"
                            style="@style/radiobutton"
                            android:text="@string/s9q107" />

                        <RadioButton
                            android:id="@+id/s9q108"
                            style="@style/radiobutton"
                            android:text="@string/s9q108" />

                        <RadioButton
                            android:id="@+id/s9q109"
                            style="@style/radiobutton"
                            android:text="@string/s9q109" />

                        <RadioButton
                            android:id="@+id/s9q110"
                            style="@style/radiobutton"
                            android:text="@string/s9q110" />

                        <RadioButton
                            android:id="@+id/s9q111"
                            style="@style/radiobutton"
                            android:text="@string/s9q111" />

                        <RadioButton
                            android:id="@+id/s9q112"
                            style="@style/radiobutton"
                            android:text="@string/s9q112" />

                        <RadioButton
                            android:id="@+id/s9q113"
                            style="@style/radiobutton"
                            android:text="@string/s9q113" />

                        <RadioButton
                            android:id="@+id/s9q196"
                            style="@style/radiobutton"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/s9q196x"
                            style="@style/EditTextAlpha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/specify"
                            android:tag="s9q196"
                            android:text='@{s9q196.checked? s9q196x.getText().toString() : ""}'
                            android:visibility='@{s9q196.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- s9q2  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q2"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/s9q2" />

                    <RadioGroup
                        android:id="@+id/s9q2"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/s9q201"
                            style="@style/radiobutton"
                            android:text="@string/s9q201" />

                        <RadioButton
                            android:id="@+id/s9q202"
                            style="@style/radiobutton"
                            android:text="@string/s9q202" />

                        <RadioButton
                            android:id="@+id/s9q203"
                            style="@style/radiobutton"
                            android:text="@string/s9q203" />

                        <RadioButton
                            android:id="@+id/s9q204"
                            style="@style/radiobutton"
                            android:text="@string/s9q204" />

                        <RadioButton
                            android:id="@+id/s9q205"
                            style="@style/radiobutton"
                            android:text="@string/s9q205" />

                        <RadioButton
                            android:id="@+id/s9q206"
                            style="@style/radiobutton"
                            android:text="@string/s9q206" />

                        <RadioButton
                            android:id="@+id/s9q207"
                            style="@style/radiobutton"
                            android:text="@string/s9q207" />

                        <RadioButton
                            android:id="@+id/s9q208"
                            style="@style/radiobutton"
                            android:text="@string/s9q208" />

                        <RadioButton
                            android:id="@+id/s9q209"
                            style="@style/radiobutton"
                            android:text="@string/s9q209" />

                        <RadioButton
                            android:id="@+id/s9q210"
                            style="@style/radiobutton"
                            android:text="@string/s9q210" />

                        <RadioButton
                            android:id="@+id/s9q211"
                            style="@style/radiobutton"
                            android:text="@string/s9q211" />

                        <RadioButton
                            android:id="@+id/s9q212"
                            style="@style/radiobutton"
                            android:text="@string/s9q212" />

                        <RadioButton
                            android:id="@+id/s9q213"
                            style="@style/radiobutton"
                            android:text="@string/s9q213" />

                        <RadioButton
                            android:id="@+id/s9q296"
                            style="@style/radiobutton"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/s9q296x"
                            style="@style/EditTextAlpha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/specify"
                            android:tag="s9q296"
                            android:text='@{s9q296.checked? s9q296x.getText().toString() : ""}'
                            android:visibility='@{s9q296.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- s9q3  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q3"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/s9q3" />

                    <RadioGroup
                        android:id="@+id/s9q3"
                        style="@style/radiogroup">

                        <RadioButton
                            android:id="@+id/s9q301"
                            style="@style/radiobutton"
                            android:text="@string/s9q301" />

                        <RadioButton
                            android:id="@+id/s9q302"
                            style="@style/radiobutton"
                            android:text="@string/s9q302" />

                        <RadioButton
                            android:id="@+id/s9q303"
                            style="@style/radiobutton"
                            android:text="@string/s9q303" />

                        <RadioButton
                            android:id="@+id/s9q304"
                            style="@style/radiobutton"
                            android:text="@string/s9q304" />

                        <RadioButton
                            android:id="@+id/s9q305"
                            style="@style/radiobutton"
                            android:text="@string/s9q305" />

                        <RadioButton
                            android:id="@+id/s9q306"
                            style="@style/radiobutton"
                            android:text="@string/s9q306" />

                        <RadioButton
                            android:id="@+id/s9q307"
                            style="@style/radiobutton"
                            android:text="@string/s9q307" />

                        <RadioButton
                            android:id="@+id/s9q308"
                            style="@style/radiobutton"
                            android:text="@string/s9q308" />

                        <RadioButton
                            android:id="@+id/s9q309"
                            style="@style/radiobutton"
                            android:text="@string/s9q309" />

                        <RadioButton
                            android:id="@+id/s9q310"
                            style="@style/radiobutton"
                            android:text="@string/s9q310" />

                        <RadioButton
                            android:id="@+id/s9q311"
                            style="@style/radiobutton"
                            android:text="@string/s9q311" />

                        <RadioButton
                            android:id="@+id/s9q312"
                            style="@style/radiobutton"
                            android:text="@string/s9q312" />

                        <RadioButton
                            android:id="@+id/s9q313"
                            style="@style/radiobutton"
                            android:text="@string/s9q313" />

                        <RadioButton
                            android:id="@+id/s9q396"
                            style="@style/radiobutton"
                            android:text="@string/other" />

                        <EditText
                            android:id="@+id/s9q396x"
                            style="@style/EditTextAlpha"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/specify"
                            android:tag="s9q396"
                            android:text='@{s9q396.checked? s9q396x.getText().toString() : ""}'
                            android:visibility='@{s9q396.checked? View.VISIBLE : View.GONE}' />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout style="@style/hlinearlayout">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttonEnd"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttonNext"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>