<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.ctsam.ui.sections.Section8Activity" />
    </data>

    <ScrollView
        style="@style/i_scrollview"
        android:layoutDirection="rtl"
        android:textDirection="rtl">

        <LinearLayout
            android:id="@+id/fldGrpSection8"
            style="@style/vlinearlayout">

            <!-- fus8q1  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q1"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q1" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q101  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q101"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q101" />

                    <RadioGroup
                        android:id="@+id/fus8q101"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fus8q101a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q101a" />

                        <RadioButton
                            android:id="@+id/fus8q101b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q101b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q102  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q102"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q102" />

                    <RadioGroup
                        android:id="@+id/fus8q102"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fus8q102a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q102a" />

                        <RadioButton
                            android:id="@+id/fus8q102b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q102b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q2  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q2"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q2" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q201  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q201"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q201" />

                    <RadioGroup
                        android:id="@+id/fus8q201"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fus8q201a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q201a" />

                        <RadioButton
                            android:id="@+id/fus8q201b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q201b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q3  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q3"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q3" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q301  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q301"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q301" />

                    <RadioGroup
                        android:id="@+id/fus8q301"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fus8q301a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q301a" />

                        <RadioButton
                            android:id="@+id/fus8q301b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q301b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q4  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q4"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q4" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- fus8q401  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVfus8q401"
                style="@style/cardView">

                <LinearLayout style="@style/vlinearlayout">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/fus8q401" />

                    <RadioGroup
                        android:id="@+id/fus8q401"
                        style="@style/radiogroup"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/fus8q401a"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q401a" />

                        <RadioButton
                            android:id="@+id/fus8q401b"
                            style="@style/radiobutton"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/fus8q401b" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout style="@style/hlinearlayout">

                <Button
                    android:id="@+id/btn_End"
                    style="@style/buttonEnd"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/btn_Continue"
                    style="@style/buttonNext"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save" />
                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>